--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
     <body>
         <h1>Odin Recipes</h1>
         <a href="./recipes/tiramisu.html">Tiramisu</a>
+        <a href="./recipes/wellington.html">Beef Wellington</a>
     </body>
 </html>
