--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     </head>
     <body>
         <h1>Odin Recipes</h1>
-        <a href="./recipes/tiramisu.html">Tiramisu</a>
-        <a href="./recipes/wellington.html">Beef Wellington</a>
+        <ul>
+            <li><a href="./recipes/tiramisu.html">Tiramisu</a></li>
+            <li><a href="./recipes/wellington.html">Beef Wellington</a></li>
+            <li><a href="./recipes/crepe-cake.html">Strawberry Crepe Cake</a></li>
+        </ul>
     </body>
 </html>
