--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -1,4 +1,4 @@
-<h1>Tiramisu</h1>
+<h1>Beef Wellington</h1>
 <img src="../images/wellington.jpeg" alt="beef wellington">
 <h2>Description</h2>
 <p>This is a very easy recipe that I learned when I was living in England. Note that Beef Wellington should always be served with the center slightly pink. Enjoy!</p>
