set recipes images to 100 px height

--- a/recipes/crepe-cake.html
+++ b/recipes/crepe-cake.html
@@ -1,5 +1,5 @@
 <h1>Strawberry Crepe Cake</h1>
-<img src="../images/crepe-cake.jpeg" alt="Strawberry Crepe Cake">
+<img src="../images/crepe-cake.jpeg" alt="Strawberry Crepe Cake" height="300">
 <h2>Description</h2>
 <p>Using this simple 'crepe cake' technique, you can turn any of your favorite cake fillings into visually stunning, multi-layered masterpieces.</p>
 <h2>Ingredients</h2>
