--- a/recipes/tiramisu.html
+++ b/recipes/tiramisu.html
@@ -1,5 +1,5 @@
 <h1>Tiramisu</h1>
-<img src="../images/tiramisu.jpeg" alt="tiramisu">
+<img src="../images/tiramisu.jpeg" alt="tiramisu" height="300">
 <h2>Description</h2>
 <p>A combination of cream and cake with a good taste of coffee smell and cookie layer.</p>
 <h2>Ingredients</h2>
