--- a/recipes/wellington.html
+++ b/recipes/wellington.html
@@ -26,3 +26,4 @@
     <li>Bake at 450 degrees F (230 degrees C) for 10 minutes, then reduce heat to 425 degrees F (220 degrees C) for 10 to 15 more minutes, or until pastry is a rich, golden brown. Set aside, and keep warm.</li>
     <li>Place all reserved juices in a small saucepan over high heat. Stir in beef stock and red wine; boil for 10 to 15 minutes, or until slightly reduced. Strain, and serve with beef.</li>
 </ol>
+<h3><a href="https://www.allrecipes.com/recipe/16899/beef-wellington/">recipe source</a></h3>
